fase_5/tech_challenge/donation-ms/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: solidary-tech-ingress
  namespace: solidary-tech
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  
spec:
  ingressClassName: nginx
  rules:
    - host: a79fa538cfbc74de99dac0e49d897745-de86fc9acad3951c.elb.us-east-1.amazonaws.com
      http:
        paths:
          - path: /ngos(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ngo-service
                port:
                  number: 8081
          - path: /donations(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: donations-service
                port:
                  number: 8082
          - path: /volunteers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: volunteers-service
                port:
                  number: 8083
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-internal-link
                port:
                  number: 9090
